i made a lot of stuff and forgot to commit.. so here is some jquery and js for initializing a new game and players

--- a/index.html
+++ b/index.html
@@ -8,14 +8,29 @@
 
   <body>
     <h1>Tic Tac Toe</h1>
-    <div id="tic-tac-toe"></div>
+    <div class="message"></div>
+    <div id="tic-tac-toe">
+    <table>
+    <tr>
+      <td><button class="square one" data-square="one"></button></td> 
+      <td><button class="square two" data-square="two"></button></td>   
+      <td><button class="square three" data-square="three"></button></td>
+    </tr>
+    <tr>
+      <td><button class="square four" data-square="four"></button></td> 
+      <td><button class="square five" data-square="five"></button></td>   
+      <td><button class="square six" data-square="six"></button></td>
+    </tr>
+    <tr>
+      <td><button class="square seven" data-square="seven"></button></td> 
+      <td><button class="square eight" data-square="eight"></button></td>   
+      <td><button class="square nine" data-square="nine"></button></td>
+    </tr>
+      </table>    
+    </div>
   </body>
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script src="tic-tac-toe.js"></script>
-  <script type="text/javascript">
-    $(document).on('ready', function() {
-      console.log('create and begin the game here!');
-    })
-  </script>
+  <script type="text/javascript"></script>
 </html>
 
