moved functions around to constructor to try anf fix bugs.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Tic Tac Toe</h1>
     <div class="current-turn">Current Turn: <span class="player-turn"></span><div>
+    <div class="message"></div>
     <div id="tic-tac-toe">
     <table>
     <tr>
@@ -28,8 +29,7 @@
     </tr>
       </table>    
     </div>
-    <div class="message"></div>
-    <button class="reset">Play Again!</button>
+    <button class="reset">PLAY AGAIN!</button>
   </body>
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script src="tic-tac-toe.js"></script>
