--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   </head>
 
   <body>
-    <h1>Cat-Dog-Toe</h1>
+    <h1>Tic-Tac-Toe</h1>
 
-    <button class="play-button">play tic-tac-toe!</button><br>
+    <button class="play-button">PLAY!</button><br>
     <div class="play">
       Player 1
       <p class="emoji">🐱</p>
